Desenvolvida a funcionalidade DNS Scanner
